# TrafficManager

./: TrafficManager.code-workspace
processor/: pyproject.toml
sim/: Cargo.toml
sim/assets/: Three way traffic light.glb  Traffic Light(1).glb  Traffic Light.glb  scene.glb  traffic_light.glb
sim/assets/models/: crosswalk.glb  pole.glb  street.glb  traffic_light.glb
sim/src/: components.rs  main.rs
sim/src/plugins/: car.rs  mod.rs  scene.rs  state.rs  traffic_pole.rs  ui.rs
