[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-inspector-egui = "0.25.2"
bevy_rapier3d = { version = "0.27.0", features = [
    "simd-stable",
    "debug-render-3d",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
